--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "classnames": "^2.3.2",
+    "connectkit": "^0.0.2",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "typescript": "^4.8.4",
+    "wagmi": "^0.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
