--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.6",
     "classnames": "^2.3.2",
     "connectkit": "^0.0.2",
+    "date-fns": "^2.29.3",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
