--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-window": "^1.8.5"
+    "@types/lodash.isequal": "^4.5.6",
+    "@types/react-window": "^1.8.5",
+    "lodash.isequal": "^4.5.0"
   }
 }
