--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "bignumber.js": "^9.1.0",
+    "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
     "connectkit": "^0.0.2",
     "date-fns": "^2.29.3",
@@ -52,8 +53,10 @@
     ]
   },
   "devDependencies": {
+    "@types/chartjs-plugin-crosshair": "^1.1.1",
     "@types/lodash.isequal": "^4.5.6",
     "@types/react-window": "^1.8.5",
+    "chartjs-plugin-crosshair": "^1.2.0",
     "lodash.isequal": "^4.5.0"
   }
 }
