--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/lodash.isequal": "^4.5.6",
     "@types/react-window": "^1.8.5",
     "chartjs-plugin-crosshair": "^1.2.0",
-    "lodash.isequal": "^4.5.0"
+    "lodash.isequal": "^4.5.0",
+    "prettier": "^2.8.1"
   }
 }
